--- a/css/style.css
+++ b/css/style.css
@@ -41,4 +41,64 @@ h1{
     background-color: yellow;
     padding: 5px;
  }
+
+ #tittle_box{
+    color: blue;
+    font-family: 'Roboto', sans-serif;
+    background-color: aqua;
+    /* margin-bottom: 10px; */
+    /* margin: 10px 0 10px 0; */
+    margin: 10px 5px;
+    text-align: right;
+    text-transform: lowercase;
+    word-spacing: 25px;
+    letter-spacing: 10px;
+    /* padding: 20px; */
+    padding: 0 20px 0 0;
+    border: 5px double #000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 1px blue;
+    box-shadow: -1px -5px 21px 16px rgba(214,51,214,1);
+    -webkit-box-shadow: -1px -5px 21px 16px rgba(214,51,214,1);
+    -moz-box-shadow: -1px -5px 21px 16px rgba(214,51,214,1);
+
+    font-size: 25px;
+
+
+ }
+ #box_father{
+    background-color: #000;
+    width: 50%;
+    height: 200px;
+    
+    background-image: url(https://img.freepik.com/vector-gratis/chico-lindo-jugando-futbol-dibujos-animados-vector-icono-ilustracion-concepto-icono-deporte-personas-aislado-vector-premium-estilo-dibujos-animados-plana_138676-4055.jpg?w=2000);
+    background-position: center;
+    background-size: cover;
+
+ }
+
+ @media(min-width:800px) and (max-width:1200px){
+    body{
+        background-color: red;
+
+    }
+    h1{
+        text-align: right;
+    }
+    a{
+        color: #fff;
+        font-size: 50px;
+        padding: 20px;
+    }
+
+ }
+ @media(max-width: 799px){
+    body{
+        background-image: url(https://img.freepik.com/vector-gratis/chico-lindo-jugando-futbol-dibujos-animados-vector-icono-ilustracion-concepto-icono-deporte-personas-aislado-vector-premium-estilo-dibujos-animados-plana_138676-4055.jpg?w=2000);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+ }
+ 
  
